week alignment fix

--- a/src/app/learner/pages/coursedetails/coursedetails.component.scss
+++ b/src/app/learner/pages/coursedetails/coursedetails.component.scss
@@ -1437,6 +1437,12 @@ iframe.fullScreen {
     width: 221px !important;
     white-space: pre-line !important;
     font-size: 16px !important;
+    margin-left: 5px;
+}
+
+.mod-passed {
+    position: relative;
+    top: 4px;
 }
 
 .titleName {
